# cargo-bench-compare

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
src/: builder.rs  candidates.rs  clean.rs  cli.rs  completions.rs  criterion.rs  git.rs  governor.rs  isolation.rs  main.rs  progress.rs  report.rs  runner.rs  stats.rs  workspace.rs
tests/: make_fixture.sh
