[package]
name = "cargo-bench-compare"
version = "0.8.1"
edition = "2024"
description = "Benchmark two git revisions of a Rust workspace against each other using git worktrees"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
console = "0.16.4"
ctrlc = "3"
indicatif = "0.18.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(unix)".dependencies]
libc = "0.2"
